--- a/packages/material-ui-final-form/package.json
+++ b/packages/material-ui-final-form/package.json
@@ -28,5 +28,8 @@
     "react-dom": "^16.11.0",
     "react-final-form": "^6.3.0",
     "typescript": "^3.6.4"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
