--- a/packages/material-ui-final-form/package.json
+++ b/packages/material-ui-final-form/package.json
@@ -6,6 +6,7 @@
   "homepage": "https://github.com/typeghost/reactx",
   "license": "MIT",
   "main": "lib/index.js",
+  "types": "lib/index.d.ts",
   "files": [
     "lib"
   ],
