--- a/packages/material-ui-final-form-demo/package.json
+++ b/packages/material-ui-final-form-demo/package.json
@@ -8,14 +8,14 @@
     "test": "echo \"Error: run tests from root\" && exit 1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.0",
+    "@material-ui/core": "^4.11.4",
     "@typeghost/material-ui-final-form": "^0.0.8",
-    "final-form": "^4.20.1",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1"
+    "final-form": "^4.20.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.12.4",
-    "typescript": "^4.0.3"
+    "parcel": "^2.0.0-beta.3.1",
+    "typescript": "^4.3.4"
   }
 }
